log/build_2026-04-08_11-56-09/mapping_executor/stderr.log
  File "/home/daniel-choate/paml_ros2/install/mapping_executor/lib/python3.12/site-packages/mapping_executor/ur3_executor.py", line 138
    		while future not future.done():
    		                 ^^^^^^
SyntaxError: invalid syntax

